[metadata]
name = pkgbuilder
version = 0.1.0
author = Mathijs Mortimer
author_email = mathijs@mortimer.nl
url = https://www.mortimer.nl
description = Generate files and folders for a python package in code
long_description = file: README.md
long_description_content_type = text/markdown
keywords = caido, setuptools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
